# icloud_sync_app

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.example.json  pyproject.toml
src/icloud_sync/: __init__.py  app.py  appicon.py  cards.py  config.py  desktop.py  dialogs.py  paths.py  rclone.py  runner.py  state.py  systemd.py  theme.py  tray.py
tests/: test_core.py
